--- a/wiki/zen.wikitext
+++ b/wiki/zen.wikitext
@@ -1,235 +1,10 @@
-[[Image:BodhidharmaYoshitoshi1887.jpg|thumb|250px|[[Bodhidharma]], [[woodblock]] print by [[Yoshitoshi]], [[1887]].]]
-'''Zen''' is the [[Japan]]ese name of a well known branch of [[Mahayana|Mah&#257;y&#257;na]] [[Buddhism]], practiced originally in [[China]] as [[Chan]], and subsequently in [[Korea]], [[Japan]], and [[Vietnam]]. Zen emphasizes the role of [[meditation]] ([[zazen]]) in pursuing [[Enlightenment (Buddhism)|enlightenment]]. Zen can be considered a [[religion]], a [[philosophy]], or simply a practice depending on one's perspective.  Besides this, it has been described as a way of life, work, and an art form.  
+==English==
+===Etymology===
+Japanese [[禅]]
 
-''Zen'' is the common name for this branch of Buddhism in [[Japanese language|Japanese]] as well as in [[English language|English]], however Zen is an international phenomenon, with centers in many countries around the world. 
+===Noun===
+'''Zen'''
 
-__TOC__
+# a denomination of [[Buddhism]]
 
-==Spread of Zen==
-
-Traditionally, Zen traces its roots back to [[Indian Buddhism]], where it was known by "[[dhyana|dhy&#257;na]]" (&#2343;&#2381;&#2351;&#2366;&#2344;), a [[Sanskrit]] term for meditation. This name was [[transliterate]]d into [[Chinese language|Chinese]] as ''Ch&aacute;n'' (&#31146; / simplified &#31109;); "Ch&aacute;n" was later borrowed into [[Korean language|Korean]] as ''[[Seon]]'', [[Vietnamese language|Vietnamese]] as ''[[Thien|Thi&#7873;n]]'' and  into Japanese as "Zen."
-
-According to traditional accounts, Zen was founded in China by a [[Central Asian]] or [[Indian]] Buddhist monk, [[Bodhidharma]] ([[Daruma]] in Japanese). He was the 28th in the line of transmission from the Buddha's disciple [[Kasyapa]]. He traveled from Conjeeveram, near [[Madras]] (now Chennai), India, to [[Guangdong]] (Canton), China in 520 [[CE]], where he met the Liang-dynasty (502-557) emperor Wudi and had a famous exchange declaring that good deeds done with selfish intention were useless (conferred no [[merit]]) for gaining [[enlightenment]]. He then went to a monastery near [[Luoyang]] in eastern China and, according to legend, spent nine years meditating before a cliff wall before accepting any disciples.
-
-As a legendary [[culture hero]] Bodhidharma has also been linked to the [[Shaolin Temple]] and the subsequent spread of [[East Asian]] [[martial arts]] in the oral traditions of schools like [[Kung Fu]] and [[T'ai Chi Ch'uan]], as well as in much popular [[wuxia]] fiction.
-
-Later, Korean monks studying in China learned what was by then called Chan, and which had by then been influenced somewhat by Chinese [[Taoism]]. After the tradition was expanded to Korea, it came to be called Seon there (sometimes misspelled as Soen in the West). Korean monks then brought it to Japan around the [[7th century|seventh century]], where it came to be called Zen. 
-<!-- This is a table. Skip past it to edit the article. -->
-{| border=1 width=300 cellpadding=2 cellspacing=0 align=right style="margin:0 0 1em 1em;"
-|-
-! colspan=2 align=center bgcolor=#FFCCCC | '''Zen'''
-|-
-! colspan=2 align=center | '''[[Sanskrit]] Name'''
-|-
-| Sanskrit
-| &#2343;&#2381;&#2351;&#2366;&#2344; [[dhyana|dhy&#257;na]]
-|-
-! colspan=2 align=center | '''Chinese Name'''
-|-
-| width=150 | [[Hanyu Pinyin]]
-| width=150 | [[Chan|Chán]]
-|-
-| width=150 | [[Wade-Giles]]
-| width=150 | Ch'an2
-|-
-| width=150 | [[Cantonese language|Cantones]][[Jyutping|e Jyutping]]
-| width=150 | sim4
-|-
-| [[Traditional Chinese character|Traditional character]]
-| &#31146;
-|-
-| [[Simplified Chinese character|Simplified character]]
-| &#31109;
-|-
-! colspan=2 align=center | '''[[Korean language|Korean]] Name'''
-|-
-| width=150 | [[Revised Romanization of Korean|Revised Romanization]]
-| width=150 | [[Seon]]
-|-
-| width=150 | [[McCune-Reischauer]]
-| width=150 | S&#335;n
-|-
-| [[Hangul]]
-| &#49440;
-|-
-| width="150" | [[Hanja]]
-| width="150" | &#31146;
-|-
-! colspan=2 align=center | '''[[Japanese language|Japanese]] Name'''
-|-
-| [[Romaji]]
-| Zen
-|-
-| [[Kanji]]
-| &#31109;
-|-
-! colspan=2 align=center | '''[[Vietnamese language|Vietnamese]] Name'''
-|-
-| [[Vietnamese_alphabet|Qu&#7889;c ng&#7919;]]
-| [[Thien|Thi&#7873;n]]
-|-
-|}
-It is important to note, however, that Chan, Seon and Zen continued to develop separately in their home countries, and all maintain separate identities to this day. Although lineage lines in China, Korea, Japan and elsewhere appear to show direct descent from Bodhidharma, changes in belief and practice have inevitably appeared with the profusion of Chan/Seon/Zen. 
-
-The Japanese [[Rinzai]] Zen scholar [[D.T. Suzuki]] maintained that a Zen ''[[satori]]'' (awakening) was the goal of the training, but that which distinguished the tradition as it developed in China, Korea, and Japan was a way of life radically different from that of Indian Buddhists. In India, the tradition of the [[mendicant]] (holy beggar, or [[bhikku]] in [[Pali]]) prevailed, but in China social circumstances led to the development of a temple and training-center system in which the abbot and the monks all performed mundane tasks. These included food gardening or farming, carpentry, architecture, housekeeping, administration, and the practice of folk medicine. Consequently, the enlightenment sought in Zen had to stand up well to the demands and potential frustrations of everyday life.
-
-==Zen in Japan==
-
-The following Zen traditions still exist in Japan: [[Rinzai]], [[Soto]], and [[Obaku School|Obaku]].  Originally formulated by the [[eponym]]ous Chinese master [[Linji]] (Rinzai in Japanese), the Rinzai school was introduced to [[Japan]] in [[1191]] by [[Eisai]]. [[Dogen]], who studied under Eisai, would later carry the [[Caodong]], or "Soto" Zen school to Japan from [[China]].  Obaku was introduced in the [[17th century]] by [[Ingen]], a Chinese monk.
-
-Some contemporary Japanese Zen teachers, such as [[Daiun Harada]] and [[Shunryu Suzuki]] have criticized Japanese Zen as being a formalized system of empty rituals with very few Zen practitioners ever actually ''attaining'' realization.  They assert that almost all Japanese temples have become family businesses handed down from father to son, and the Zen priest's function has largely been reduced to officiating at funerals.
-
-Some Japanese Zen [[sect]]s and teachers have also been criticized for their involvement in Japanese [[militarism]] and [[nationalism]] especially during [[World War II]].  In particular an American [[Soto]] Zen priest Brian Victoria has exposed a number of instances where Buddhist teachings were used to justify acts of killing. [http://www.amazon.com/exec/obidos/tg/detail/-/0834804050/103-9814091-3292632?v=glance]
-
-Zen is also associated with [[Japanese tea ceremony]].
-
-==Zen and Buddhism==
-{{buddhism}}
-Zen is considered by some as not necessarily a [[Buddhist]] religion as a number of non-Buddhists, particularly Christians, have been formally acknowledged as [[Zen master]]s.  Zen is often described as a ''way of life'' not dependent on one's particular culture. 
-
-At the same time, the institutions that support Zen practice have historically all been Buddhist and uphold the fundamental teachings of [[Gautama Buddha]]. Even today there are very few non-Buddhist Zen teachers and fewer organizations to support non-Buddhist practice. So, for all practical purposes Zen is Zen Buddhism.
-
-Though Zen meditation practice does derive from the Buddha's original [[Eightfold Path]] teaching, where [[dhyana]] is one element of the eightfold way, Zen has been occasionally criticized by [[Theravada]] Buddhists for not adequately emphasizing the other elements of the Eightfold Path and for not emphasizing study of the traditional [[Tripitaka|Buddhist canon]] or for being ignorant of, or unconcerned with, [[Buddhist philosophy]] in general. In practice, however, most Zen teachers, monks and centers have good relationships with those of other Buddhist schools and often cooperate with them.
-
-==Zen teachings and practices==
-Zen teachings often criticize [[text]]ual [[Hermeneutics|study]] and the pursuit of worldly accomplishments, concentrating primarily on meditation in pursuit of an unmediated awareness of the processes of the world and the mind. Zen, however, is no mere quietistic doctrine: the Chinese Chan master [[Baizhang]] ([[720]]-[[814]] CE), ([[Japanese language|Japanese]]: ''Hyakujo''), left behind a famous saying which had been the guiding principle of his life, "A day without work is a day of no eating." When Baizhang was thought to be too old to work in the garden, his devotees hid his gardening tools. In response to this, the master then refused to eat, saying "No working, no living." 
-
-These teachings are in turn deeply rooted in the Buddhist textual tradition, drawing primarily on [[Mahayana|Mah&#257;y&#257;na]] sutras composed in India and China, particularly the [[Heart Sutra]], the [[Diamond Sutra]], the [[Lankavatara Sutra]], and the ''Samantamukha Parivarta'', a chapter of the [[Lotus Sutra]]. The body of Zen doctrine also includes the recorded teachings of masters in the various Zen traditions. The heavy influence of the Lankavatara Sutra, in particluar, has led to the formation of the "mind only" concept of Zen, in which [[consciousness]] itself is recognized as the only true [[reality]].
-
-Zen is not primarily an intellectual philosophy nor a solitary pursuit.  Zen centers emphasize meticulous daily practice, and hold monthly intensive meditation retreats.  Practicing with others is valued as a way to avoid the traps of ego.  In explaining the Zen Buddhist path to Westerners, Japanese Zen teachers have frequently pointed out, moreover, that Zen is a ''way of life'' and not solely a state of consciousness. D.T. Suzuki wrote that the aspects of this life were: a life of humility; a life of labor; a life of service; a life of prayer and gratitude; and a life of meditation.  
-
-===Zazen===
-Zen [[meditation]] is called [[zazen]]. Zazen translates approximately to "[[sitting]] meditation", although it can be applied to practice in any posture. During zazen, practitioners usually assume a [[lotus position|lotus]], [[half-lotus]], [[Burmese posture|Burmese]], or [[seiza]] sitting position. A round cushion ([[zafu]]) placed on a padded mat ([[zabuton]]) is used to sit on, or a chair may be used. Rinzai practitioners typically sit facing the center of the room, while Soto practitioners sit facing a wall. Awareness is directed towards complete cognizance of one's posture and breathing. In this way, practitioners seek to transcend thought and be directly aware of the universe.
-
-In Soto, [[shikantaza]] meditation ("just-sitting") that is, a meditation with no objects, anchors, "seeds," or content, is the primary form of practice. Considerable textual, philosophical, and phenomenological justification of this practice can be found in Dogen's [[Shobogenzo]].
-
-The daily time spent in zazen varies, Dogen recommends even 5 minutes daily for [[householders]] is beneficial.  The key being daily regularity, as Zen teaches that the ego will naturally resist, and the discipline of regularity is essential. Practicing Zen monks may spend 4-6 periods of zazen 30-40 minutes each during a normal day.  During the monthly retreat [[sesshin]]s of 1, 3, 5, or 7 day duration, they may spend 9-12 periods of scheduled group zazen, and occasionally more individual zazen late at night.  The zazen periods are usually interleaved with brief periods of walking meditation to relieve the legs.
-
-Dogen's teacher Rujing was said to spend less than 4 hours in actual sleep each night, spending the balance in zazen (see ''Dogen's formative years in China'' by Takashi James Kodera ISBN 0710002122). However, in practice, it is not uncommon for monks to actually sleep during zazen.  Some meditation researchers have theorized that Zen adepts who are able to achieve the deeper levels of [[samadhi]] in meditation are actually fulfilling the same need as [[REM sleep]], so that when zazen time is added to actual sleep time, they are in effect still getting the normal amount of daily sleep that the brain requires.  However, such ability to enter into deep samadhi during zazen is apparently fairly rare, and may not arise even after decades of meditation.
-
-===The teacher===
-Because the Zen tradition emphasizes direct communication over scriptural study, the role of the Zen teacher is crucial. Generally speaking, a Zen teacher is a person ordained in any tradition of Zen to teach the dharma, guide students of meditation and perform rituals. In some cases, especially in modern western Zen movements, a person not ordained may be able to fulfill some or all of these roles. 
-
-A central part of all Zen sects is the notion of "Dharma transmission," the claim of a line of authority that goes back to the Buddha. Originally this derived from the description of Zen attributed to Bodhidharma: 
-
-:''A special transmission outside the scriptures;
-:No dependence upon words and letters;
-:Direct pointing to the soul of man:
-:Seeing into one's own nature and attainment of Buddhahood.'' [http://www.angelfire.com/electronic/awakening101/welter.html] [http://www.mro.org/zmm/dharmateachings/talks/teisho18.htm]
-
-Since at least the [[Middle Ages]], Dharma Transmission has become a normative aspect of all Zen sects. Every Zen teacher stands within one lineage or another. Some sects, including all Japanese lines possess formal lineage charts that are drawn up for the ceremonial practice of transmission, which document the lineage back to [[Shakyamuni Buddha]].
-
-Honorific titles associated with teachers typically include, in Chinese: ''Fashi'' (&#27861;&#24107;) or ''Chanshi'' (&#31146;&#24107;); in Korean, ''Sunim'' or ''Seon Sa''; in Japanese: Osho (priest) ''[[Roshi]]'' (old master) or ''[[Sensei]]'' (teacher); and in Vietnamese, ''[[Thich]]'' adopted in place of a surname. Note that many of these titles are common among Buddhist priests of all schools present in the specific cultural context. Some titles, such as the Japanese sensei are also used beyond the Buddhist schools.
-
-The term ''Zen master'' is often used to refer to important teachers, especially ancient and medieval ones.  However, there is no specific criterion by which one can be called a Zen master.  The term is less common in reference to modern teachers, because they are generally reluctant to proclaim themselves "masters." At the same time these teachers willingly acknowledge their lineage connections, naming who authorized them as teachers.
-
-This is important as there are a number of people in the west, some leading relatively large centers, who claim to be Zen teachers but who will not say where they trained or who authorized them to teach. This is a radical departure from normative Zen where "lineage" is considered crucial. As such it is reasonable to assume such people are not what they claim to be. People seeking a teacher should be aware that there are a surprisingly large number of such self-declared masters.
-
-Some schools such as the Kwan Um publish lists of their teachers. The American Zen Teachers Association is in the process of providing lists of their members at the Association's website. When posted, while not a complete record of legitimately authorized Zen teachers in North America, it will be an enormous help to those attempting to find people who at least have formal authorization in some traditional lineage. 
-
-Of course even formal authorization should not be considered "enough." The moral lapses of any number of contemporary Zen teachers should be a warning in this regard. As the relationship between a teacher and a student requires complete intimacy and a profound trust on the part of the student, any one seriously considering studying with a Zen teacher should read widely about the prospective teacher, ask people who've studied Zen for some years, do web searches, and perhaps most importantly look closely at the teacher's students. Much can be discovered in such simple acts.
-
-===Koan practice===
-[[Image:Wu (negative).png|130px|left|thumb|[[Chinese character]] for "nothing."  [[Chinese language|Chinese]]: ''wú'' ([[Japanese language|Japanese]]: ''mu'').]]
-
-The Zen schools (especially but not exclusively Rinzai) are associated 
-with [[koan|koans]] (Japanese; Chinese: gongan; Korean: gong'an).  The 
-term originally referred to legal cases in 
-[[Tang Dynasty|Tang-dynasty]] China.  
-
-In some sense, a koan embodies a realized principle, or law of reality.  Koans often appear [[paradox]]ical or linguistically meaningless.  The 'answer' to the koan involves a transformation of perspective or consciousness, which may be either radical or subtle, possibly akin to the experience of [[metanoia]] in [[Christianity]].  They are a tool to allow the student to approach enlightenment by essentially 'short-circuiting' the logical way we order the world.  Through assimilation of a Koan it is possible to 'jump-start' an altered mindset that then facilitates enlightenment.
-
-An example of a Zen koan is:  "Two hands clap and there is 
-a sound.  What is the sound of one hand?"  It is sometimes said that 
-after diligent practice, the practitioner and the koan become one.  
-Though most Zen groups aim for a "sudden" enlightenment, this usually 
-comes only after a great deal of preparation.  
-
-For examples of 'successful' koan practice resulting in enlightenment experiences, see the anecdotes of Rinzai koan practice recounted in the first book in English to engage Zen as a practice, 'The Three Pillars of Zen' by [[Philip Kapleau]].  For examples of years of futile and fruitless koan practice see the book 'After Zen' by [[Janwillem van de Wetering]]. The most important book on the subject in English is probably Isshu Miura and Ruth Fuller Sasaki's 'Zen Dust,' sadly long out of print. Fortunately the text, while lacking the extensive footnotes, continues to be available as 'The Zen Koan: It's History and Use in Rinzai Zen.' Probably the best relatively brief survey of koan study is the introduction to Victor Sogen Hori's 'Zen Sand: The Book of Capping Phrases for Koan Practice" which can be found on the web. Also of importance, although marred by the ideological perspectives of several of its authors, is the anthology edited by Steven Heine and Dale Wright, 'The Koan: Texts and Contexts in Zen Buddhism.' 
-
-Zen teachers advise that the problem posed by a koan is to be taken quite seriously, and to be approached quite literally as a matter of life and death. There is a sharp distinction between right and wrong ways of answering a koan &mdash; though there may be many "right answers", practitioners are expected 
-to demonstrate their understanding of the koan and of Zen with their whole being.
-
-The Zen student's mastery of a given koan is presented to the teacher in a private session (called in various Japanese schools [[dokusan]], daisan or sanzen).  The answer to a koan is more dependent on "how" it is answered.  Or, to put it somewhat differently, the answer is a function not merely of a reply, but of a whole modification of the student's experience; he or she must ''live'' the answer to the koan rather than merely offering a correct statement.
-
-It is misleading to suggest there is a single correct answer for any given koan, though there are "correct" and "incorrect" answers, and, indeed, students in a [[cheat]]ing mindset would often compile books of accepted answers to koans to help prepare for the interview.  These collections are of great value to modern scholarship on the subject.
-
-Following the tradition of "living koans," a number of western Zen teachers supplement the traditional koan curriculum using various western sources, such as apparently paradoxical sayings from the [[Bible]].
-
-==Radical teachings==
-
-Some of the traditional zen fables describe Zen masters using controversial methods of 'teaching', which modern zen enthusiasts may have a tendency to interpret too literally.  For example, though Zen and Buddhism deeply respect life and teach non-violence, the founder of the Zen [[Rinzai]] school, [[Linji]] said: "If you meet the Buddha, kill the Buddha. If you meet a Patriarch, kill the Patriarch."  
-
-A contemporary Zen Master, [[Seung Sahn]], has echoed this teaching in saying that in this life we must all 'kill' three things: first we must kill parents; second we must kill Buddha; and last, we must kill the zen teacher (e.g. Seung Sahn).  Of course, ''kill'' here is not literally killing.  What is meant is to kill one's devotion to teachers or other external objects.  Rather than see concepts outside of themselves, zen practitioners must integrate these objects with their concepts of ''self''.
-
-When visiting Zen centers, people who began with the stories featuring apparent [[iconoclastic]] encounters are often surprised by the conservative and ritualistic nature of the practice. Since, most zen centers in the west, like their counterparts in the east, emphasize regular meditation on both a daily basis and in monthly retreat as well as a discpline based in practice schedules and everyday household chores such as cooking, cleaning, and gardening as the path of enlightenment.
-
-==Zen and Western culture==
-Since the [[1930s]] in the [[United Kingdom]], and at least since the [[Beatnik]] movement of the [[1950s]] in the [[United States]], the West has had a growing interest in Zen.  
-
-In Europe, the [[Expressionist]] and [[Dada]] movements in art tend to have much in common thematically with the study of koans and actual Zen.  The early French [[surrealist]] [[René Daumal]] translated [[D.T. Suzuki]] as well as Buddhist [[sanskrit]] texts.
-
-[[Eugen Herrigel]]'s book ''Zen and the Art of Archery'' (ISBN 0375705090), described his training in the Japanese Zen [[martial art]] of [[Kyudo]] [http://www.tokokyudojo.org/info/], which inspired many early Zen practitioners. 
-
-The British-American [[philosopher]] [[Alan Watts]] had a personal interest in the Zen school of Buddhism and wrote and lectured extensively on it.  He was interested in it as a vehicle for a mystical transformation of consciousness, and also in the historical example of a non-Western, non-[[Christianity|Christian]] way of life that had 
-fostered both the practical and [[fine arts]].
-
-''[[The Dharma Bums]]'', a [[novel]] written by [[Jack Kerouac]] and published in [[1959]], gave its readers a look at how a fascination with Buddhism and Zen was being absorbed into lifestyle experimentation by a small group of mainly west-coast American youths.  Besides the narrator, the main character in this novel was [[Gary Snyder]], thinly veiled as "Japhy Ryder" by his friend Kerouac.  The story was based on actual events that occurred when Snyder pursued formal Zen studies in Japanese monasteries between [[1956]] and [[1968]].
-
-Many youths in the [[Beat generation]] and among the [[hippies]] of the [[1960s]] and [[1970s]] misunderstood the goals and methods of Zen.  While the scholar [[D.T. Suzuki]] may have brought attention to concepts in Zen such as humility, labor, service, prayer, gratitude, and meditation, the "hip" subculture often focused on states of [[consciousness]] in themselves.  Japanese Zen master [[Zenkei Shibayama]] commented:  "It may be true that the effect which such scientifically prepared [[hallucinogen|drug]]s as [[LSD]] produce may have some superficial resemblance to some aspects of Zen experience....  When the effect of the drug is gone, the psychological experience one may have had is also weakened and dispersed, and does not endure as a living fact."
-
-The book ''[[Zen and the Art of Motorcycle Maintenance]]'', by 
-[[Robert M. Pirsig]], was a 1974 [[bestseller]], but is not specifically about Zen per se, but deals with the notion of the metaphysics of "quality" from the point of view of the main character.  Pirsig was attending the [[Minnesota Zen Center]] at the time of writing the book.[http://www.psybertron.org/timeline.html]  Pirsig explains in the book that, despite its title, the book "should in no way be associated with that great body of factual information relating to orthodox Zen Buddhist practice."
-
-Many modern students have made the mistake of thinking that since much of Zen sounds like nonsense, especially in [[translation]] and out of [[context]], any clever nonsense is also Zen.  This is not the case &mdash; see ''[[koan]]'' &mdash; although the [[Church of the SubGenius]] and especially [[Discordianism]] have been influenced by this idea.
-
-More "mainstream" forms of Zen, led by teachers who trained in East Asia or were trained by such teachers have begun to take root in the west. In North America the largest family of "lineages" is derived from the Japanese Soto school. These include the "White Plum" founded by Taizan Maezumi Roshi and the "Ordinary Mind" school founded by Maezumi's Dharma heir Zen master Joko Beck; as well as the "San Francisco Zen Center" lineage established by Shunryu Suzuki Roshi; and the "Katagiri" lineage established by Suzuki's sometime associate, Dainin Katagiri Roshi which has a significant presence in the midwest. 
-
-A Soto reform school which emphasizes lay practice as well as incorporating a full koan curriculum, the Sanbo Kyodan (or Order of the Three Treasures) is represented in North America by Ruben Habito Roshi, as well as Robert Aitken Roshi's "Diamond Sangha" network, the "Pacific Zen Institute" led by John Tarrant Roshi, and the "Boundless Way Zen" network led by James Ford Roshi. 
-
-The single largest Zen lineage is the Korean derived "Kwan Um School of Zen" established by Zen Master Seung Sahn. There are also a number of Japanese derived Rinzai centers, most notably the "Rinzaiji" lineage of Joshu Sasaki Roshi. and the "Dai Bosatsu" lineage established by Eido Shimano Roshi. There are also a few centers based in Chinese Chan, most notable in that it has significant western leadership is the "Dharma Drum" lineage led by Zen Master Sheng Yen.
-
-The Vietnamese Buddhist monk [[Thich Nhat Hanh]] has developed the [[Order of Interbeing]] as an independent school that combines some aspects of Zen together with other disciplines. While he appears never to have received Dharma transmission, Thich Nhat Hanh has become an important influence in the development of a western Zen. 
-
-Two pan-lineage organizations have formed in the last few years. The oldest is the American Zen Teachers Association which includes the majority of Zen teachers in North America and sponsors an annual conference. Soto lineage teachers in North America have also recently formed a Soto Zen Buddhist Association where they are exploring the possibilities of a "western Soto."
-
-==See also==
-* [[Dogen]]
-* [[Hakuin Ekaku]]
-* [[Huangbo Xiyun]]
-* [[karesansui]]
-* [[Ryokan]]
-* [[Tathagatagarbha doctrine]]
-
-==External links==
-*[[Open Directory Project]]: [http://www.dmoz.org/Society/Religion_and_Spirituality/Buddhism/Lineages/Zen/Centers/ Zen Centers]
-*[http://zenfilter.com Zen Filter]
-*[http://www.acmuller.net/ddb Digital Dictionary of Buddhism]
-*[http://www.ciolek.com/WWWVL-Zen.html Zen Buddhism WWW Virtual Library]
-*[http://www.zendo.org American Zen Centers]
-*[http://www.sacred-texts.com/bud/index.htm#north Zen texts]
-*[http://www.centrebouddhisteparis.org/En_Anglais/Sangharakshita_en_anglais/Sudden_Enlightenment/sudden_enlightenment.html Nietzsche, Zen and Sudden Enlightenment]
-
-[[Category:Branches of Buddhism]]
-[[Category:Japanese religion]]
-[[Category:Japanese terms]]
-[[Category:Zen|*]]
-
-[[de:Zen]]
-[[et:Zen-budism]]
-[[es:Zen]]
-[[eo:Zen-budhismo]]
-[[fr:Zen]]
-[[id:Zen]]
-[[it:Buddhismo Zen]]
-[[he:&#1494;&#1503; &#1489;&#1493;&#1491;&#1492;&#1497;&#1494;&#1501;]]
-[[nl:Zen]]
-[[ja:&#31109;]]
-[[no:Zen]]
-[[pl:Zen]]
-[[pt:Zen]]
-[[ru:&#1044;&#1079;&#1077;&#1085;]]
-[[sv:Zen]]
-[[vi:Thi&#7873;n t&#244;ng]]
-[[tr:Zen]]
-[[zh:&#31109;&#23447;]]
+[[fr:zen]]
